<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/parking_car"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="@dimen/margin_wide"
                android:layout_marginTop="@dimen/margin_wide"
                android:layout_marginRight="@dimen/margin_wide" android:fontFamily="@font/roboto"
                android:textSize="@dimen/box_size" style="@style/whiteBox" android:id="@+id/textView2"/>
        <Button
                android:text="@string/btn_profile1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_profile1"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_profile2" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_profile2"/>
        <Button
                android:text="@string/btn_profile2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_profile2"
                app:layout_constraintStart_toEndOf="@+id/btn_profile1" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/btn_profile3"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <Button
                android:text="@string/btn_profile3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_profile3"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_profile2"
                app:layout_constraintStart_toEndOf="@+id/btn_profile2"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/text_name"
                app:layout_constraintBottom_toTopOf="@+id/text_numb" android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginStart="@dimen/margin_wide"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/margin_wide"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/btn_profile2"
                android:hint="@string/what_is_your_name" style="@style/NameStyle" android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/small_padding" android:visibility="gone"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/text_numb"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                app:layout_constraintBottom_toTopOf="@+id/text_car" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_wide" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/margin_wide" android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/margin_wide" style="@style/NameStyle"
                android:hint="@string/What_is_your_license" android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/small_padding" android:visibility="gone"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/text_car"
                app:layout_constraintTop_toBottomOf="@+id/text_numb"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/margin_wide"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/margin_wide"
                android:layout_marginTop="@dimen/layout_margin" style="@style/NameStyle"
                android:hint="@string/What_is_your_car" android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/small_padding" android:visibility="gone"/>
        <Button
                android:text="@string/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/update_btn"
                app:layout_constraintBaseline_toBaselineOf="@+id/edit_btn" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/edit_btn"/>
        <Button
                android:text="@string/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_btn"
                app:layout_constraintStart_toEndOf="@+id/update_btn" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/text_car" app:layout_constraintBottom_toTopOf="@+id/license"
                style="@style/NameStyle" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:visibility="gone"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/license"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintBottom_toTopOf="@+id/car" style="@style/NameStyle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:visibility="gone"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car"
                app:layout_constraintTop_toBottomOf="@+id/license" style="@style/NameStyle"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
